2011/11/30:
	* Remove bags from move_items()
	* First pass of move_items()

2011/11/20:
	* Import argument processing magic from LootSorter/Baggotry
	* Add merge_items() for displaying merged lists
	* Make sure default is bank+inventory, rather than maybe empty

2011/11/18:
	* Lots of cleanup to alt inventory code.
	* Make rarity_color more usable.
	* Allow multiple slotspecs
	* Set default to (bank, inventory)

2011/11/16:
	* Added initial support for access to inventory on alts
	* Improved stacking logic, removed "inferred..." message because
	  it was spammy.

2011/11/14:
	* Made rarity_p return canonicalized names and colors
	* Removed excess testing for false values from rarity now that
	  relop() handles that
	* Added "permissive" flag to rarity to control canonicalization.

2011/11/13:
	* Merged merge/split into stack()
	* Added 'descr' to filters for dumping
	* Added rarity_p()
	* Renamed old iterate() to select(), and added a new iterate()
	  which is more like an inject.
	* Added translation of colors, and also 'nil', to rarity_p()
	* Added relops to matchers.
	* Emit "No matches" when dumping an empty baggish.
	* Fix handling of relops when something is unset in at least
	  a fair number of cases

2011/11/12:
	* Got split() working
	* Using Bagground Processing (SM)