@@ -1,5 +1,6 @@
-VERSION=0.3
+VERSION=0.5
 PACKAGE=LibBaggotry
+EMBEDS=libaccounts libdraggable
 
 include ../addon.mk
 
